Add sample NUSOS text

--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
   <head>
     <!-- toast - dead simple responsive framework -->
     <!-- get it at https://github.com/daneden/Toast -->
+    <link rel="stylesheet" href="Toast/toast.css">
+    <!-- google font goodness goes here: -->
+
 
     <!-- our css -->
+    <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
-
+    <h1>NUSOS 2014</h1>
+    <p>
+      It's easy for discussions of a sustainable future to fall into the gloom and doom, or for people to ignore what should be the Earth's most unifying upcoming challenge -- climate change -- by writing it off as a problem for other people to solve, or something that hasn't personally affected them yet. We want to create a space for people to discuss and be motivated by the many possibilities in this field, and foster discussion bringing in thought-provoking leaders to challenge and inspire debates moving forward.
+    </p>
+    <h2>About NUSOS</h2>
+    <p>
+      The Northwestern University Summit on Sustainability (NUSOS) is an annual environmental conference that brings together members of the Northwestern community, business leaders, and individuals from the Chicago-land area to learn about and discuss a sustainability topic.
+    </p>
+    <h2>About ESW</h2>
+    <p>
+      Engineers for a Sustainable World (ESW) is an international network of technically- minded people working to improve the sustainability of local communities. With 33 student and professional chapters, ESW uses technical design projects and educational initiatives to build a community with the next generation of technical sustainability leaders. This year, NUSOS and ESW are partnering to host a three-day national conference, from April 10th to 12th, flying in students from chapters at colleges across the country. Pairing these two conferences brings a stronger set of speakers, a larger community, and showcases the exceptional impacts ESW-NU has created in their 10 years of existence.
+    </p>
+    <h2>This Year's Theme</h2>
+    <p>
+      The 2014 theme is "Innovation." Innovation is what drives drives us toward the future. There is always room for improvement, even in the simplest of tasks. This year, we hope to discuss new ideas to solve new problems, new ideas to solve old problems, and how we as a community can work for a better future.
+    </p>
+    <p>
+      One of ESW's core values states that innovation doesn't always mean new technologies. Innovation can also be found in new applications of old or locally appropriate technologies, new ways of doing things, or new value systems that cause a shift in culture. With the pressing sustainability crises of climate change, a lower-growth economy, and decreasing resource availability, innovation is key to shifting the world we've got and growing the world we want.
+    <p>
+      In choosing such a dynamic and relevant theme, we hope to attract a diverse group of participants to the conference. The various panels will allow NUSOS to provide a framework for open discussion. We will host speakers from different backgrounds who can share their unique perspectives and opinions regarding innovation and the environment. Our goal is to foster new conversations that not only lead to a better understanding of the issues, but also to a better understanding of the solutions that can be developed.
+    </p>
+    <p>
+      Our panelists and keynote will address topics ranging from new technology and policy, innovations in energy and agriculture, as well as evolving models of community engagement and environmental social justice.
+    </p>
   </body>
 </html>
